增加交易uuid&代码优化
